--- a/index.html
+++ b/index.html
@@ -1,10 +1,91 @@
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ligong Wang - Independent Researcher</title>
-  </head>
-  <body>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+        }
+        section {
+            padding: 20px;
+            margin: 10px;
+            background-color: white;
+            border-radius: 8px;
+        }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #333;
+            color: white;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+        a {
+            color: #1a73e8;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .contact-info {
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+
+<header>
     <h1>Ligong Wang</h1>
-    <p>Independent Researcher, focusing on AI and Philosophy of Technology.</p>
-    <p><a href="https://orcid.org/0009-0007-6192-3684">ORCID Profile</a></p>
-  </body>
+    <p>Independent Researcher, focusing on AI and Philosophy of Technology</p>
+</header>
+
+<section>
+    <h2>About Me</h2>
+    <p>
+        I am an independent researcher with a focus on Artificial Intelligence (AI) and the Philosophy of Technology. My work explores the intersections between emerging technologies and human cognition, and I am especially interested in the implications of AI on societal structures and individual autonomy.
+    </p>
+
+    <h2>ORCID Profile</h2>
+    <p>
+        You can view my academic publications and contributions on my ORCID profile: 
+        <a href="https://orcid.org/0000-0001-6192-3684" target="_blank">ORCID: 0000-0001-6192-3684</a>
+    </p>
+
+    <h2>Research Interests</h2>
+    <ul>
+        <li>Artificial Intelligence (AI) and Ethics</li>
+        <li>Philosophy of Technology</li>
+        <li>Human-Computer Interaction (HCI)</li>
+        <li>AI and Society</li>
+        <li>Technology's Impact on Human Cognition</li>
+    </ul>
+
+    <h2>Contact Information</h2>
+    <div class="contact-info">
+        <p>Email: <a href="mailto:wlg8340@gmail.com">wlg8340@gmail.com</a></p>
+    </div>
+</section>
+
+<footer>
+    <p>&copy; 2025 Ligong Wang | All Rights Reserved</p>
+</footer>
+
+</body>
 </html>
